--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "pug": "^3.0.2",
     "stylus": "^0.55.0",
     "svelte": "^4.0.5",
     "svelte-preprocess": "^5.0.4",
