--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "stylus": "^0.55.0",
     "svelte": "^4.0.5",
     "svelte-preprocess": "^5.0.4",
+    "svelte-switch-case": "^2.0.0",
     "vite": "^4.4.5"
   },
   "dependencies": {
     "@panzoom/panzoom": "^4.5.1",
     "animejs": "^3.2.1",
     "konva": "^9.2.1",
+    "structure": "^2.0.1",
     "svelte-portal": "^2.2.0",
     "two.js": "^0.8.11"
   }
