--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@panzoom/panzoom": "^4.5.1",
     "animejs": "^3.2.1",
+    "json-stringify-pretty-compact": "^4.0.0",
     "konva": "^9.2.1",
     "structure": "^2.0.1",
     "svelte-portal": "^2.2.0",
