--- a/package.json
+++ b/package.json
@@ -14,18 +14,11 @@
     "stylus": "^0.55.0",
     "svelte": "^4.0.5",
     "svelte-preprocess": "^5.0.4",
-    "svelte-preprocess-delegate-events": "^0.4.2",
     "svelte-switch-case": "^2.0.0",
     "vite": "^4.4.5"
   },
   "dependencies": {
     "@panzoom/panzoom": "^4.5.1",
-    "animejs": "^3.2.1",
-    "farmhash": "^3.3.0",
-    "json-stringify-pretty-compact": "^4.0.0",
-    "konva": "^9.2.1",
-    "structure": "^2.0.1",
-    "svelte-portal": "^2.2.0",
-    "two.js": "^0.8.11"
+    "json-stringify-pretty-compact": "^4.0.0"
   }
 }
